# taillight

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  Makefile  README.md  SECURITY.md  docker-compose.override.example.yml  docker-compose.separate.yml  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
api/: .dockerignore  .golangci.yml  API.md  Dockerfile  Makefile  System_Log_Messages_Junos_OS_25.4R1.xlsx  System_Log_Messages_Junos_OS_Evolved_25.4R1.xlsx  config.yaml.example  config.yml.example  go.mod  go.sum
docs/: ARCHITECTURE.md  INTERNALS.md  NOTIFICATIONS.md  NOTIFICATION_SYSTEM_DESIGN.md  OLLAMA-MAC.md  OVERVIEW.md  SECURITY_AUDIT.md  ai-analysis-setup.md  dashboard-aggregates.md  go-logshipper.md  journald-remote-ingestion.md  nginx-example.conf  nginx-reverse-proxy-docker.conf  nginx-reverse-proxy.conf.example  nginx-separate-subdomains.md  python-logshipper.md
docs-old/: TODO.md  analysis-feature.md  batch-inserter-design.md  rsyslog-juniper-research.md  sse-backend-design.md
frontend/: .dockerignore  .env.example  .prettierignore  API.md  Dockerfile  Makefile  docker-compose.yml  docker-entrypoint.sh  eslint.config.js  index.html  nginx-standalone.conf  nginx.conf  nginx.conf.template  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  (+2 more)
sdk/python/: LICENSE  Makefile  README.md  pyproject.toml
sdk/python/src/taillight_handler/: __init__.py  _handler.py
sdk/python/src/taillight_sdk/: __init__.py  _handler.py
sdk/python/tests/: test_handler.py
(+599 files in other folders)
